<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            app:cardBackgroundColor="@color/branco">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/calculadora" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="110dp"
                android:text="@string/nome"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="140dp"
                android:text="@string/slogan"
                android:textAlignment="center"
                android:textSize="16dp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="384dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/oque"
            android:textSize="20dp"
            android:textColor="@color/branco" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_marginTop="60dp">
            <Button
                android:id="@+id/button_imc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_marginTop="120dp">
            <Button
                android:id="@+id/button_nescessidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nessecidade"/>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>